--- a/IconMaker/MainWindow.xaml
+++ b/IconMaker/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:model="clr-namespace:IconMaker.Model"
         xmlns:wpf="clr-namespace:IconMaker.wpf"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:colorFilters="clr-namespace:IconMaker.Model.ColorFilters"
         mc:Ignorable="d"
         Title="Icon Maker"
         Icon="IconMaker.ico"
